# VulkanOne

./: CMakeLists.txt  LICENSE  README.md
assets/shaders/src/: fragment.frag  vertex.vert
cmake_modules/: compile_shaders.cmake
include/vk_one/: CMakeLists.txt
include/vk_one/app/: application.h
include/vk_one/engine/: config.h  utils.hpp
include/vk_one/engine/core/: instance.hpp  window.h
include/vk_one/engine/renderer/: constants.hpp  device.hpp  instance.hpp  memory_allocator.hpp  model.hpp  pch.h  physical_device.hpp  pipeline.hpp  renderer_pch.h  utils.hpp
src/: application.cpp  application.cppm  application.h  config.cppm  config.h  configs.json  main.cpp  window.cpp  window.cppm  window.h
src/app/: application.cpp
src/engine/: config.h  configs.json  window.cpp  window.h
src/engine/core/: instance.cpp  window.cpp
src/engine/renderer/: device.cpp  instance.cpp  memory_allocator.cpp  model.cpp  physical_device.cpp  pipeline.cpp
